# di

./: .clang-format  .gitignore  CMakeLists.txt  README.md
di/: bean.cppm  di.cppm  fwd.cppm  lifetime.cppm  lifetime_manager.cppm  resolve_dependency.cppm  service_container.cppm  service_factory.cppm  utils.cppm
tests/: CMakeLists.txt  config.cppm  main.cpp
